--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://marcuth.github.io/spine-player.js"></script>
     <script type="module" src="/src/main.tsx"></script>
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
   </body>
